--- a/projectos/estilo/style.css
+++ b/projectos/estilo/style.css
@@ -1,15 +1,28 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+
+     --fonte1:verdana,geneva,tahoma,sans-serif;
+     --fonte2:'Passion One', sans-serif;
+     --fonte3: 'Sriracha', cursive;
+
+}
 
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+    font-family: ;
 }
 
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -21,6 +34,8 @@ header{
 header >h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size:10vw ;
 }
 
 header> p{
@@ -41,6 +56,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 4.5vw;
 }
 
 section.normal{
@@ -54,7 +71,8 @@ section.imagem{
 }
 section.imagem>p{
     background-color: rgba(0, 0, 0, 0.712);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
