--- a/projectos/projecto cordel/estilo/style.css
+++ b/projectos/projecto cordel/estilo/style.css
@@ -59,20 +59,35 @@ section{
     font-family: var(--fonte3);
     font-size: 4.5vw;
 }
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-size: cover;
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
+}
+section  > p{
+    padding-bottom: 2em;
+}
 
 section.normal{
     background-color: white;
-    color: black;
+    color:black;
 }
 
 section.imagem{
     background-color: rgba(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-attachment: fixed;
+    
 }
-section.imagem>p{
-    background-color: rgba(0, 0, 0, 0.712);
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.521);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black ;
 }
 
 footer{
