--- a/exercicios/efeitos e dicas/efeitosmenudinamico/style.css
+++ b/exercicios/efeitos e dicas/efeitosmenudinamico/style.css
@@ -1,2 +1,63 @@
 @charset "UTF-8";
 
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'outfit',sans-serif;
+}
+
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #212121;
+}
+
+ul {
+    list-style:none ;
+    display: flex;
+}
+ul li{
+    margin: 0 20px;
+}
+ul li a{
+ font-size: 22px;
+color: white;
+text-decoration: none;
+transition: .2s;
+display: block;
+position: relative;
+padding: 5px;
+}
+
+ul:hover li a{
+opacity: .3;
+
+
+}
+ul li a:hover{
+  opacity: 1;
+  transform: scale(1.2);
+}
+
+ul li a::before{
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: #ff497c;
+   z-index: -1;
+   transform-origin: right;
+   transform: scaleX(0);
+   transition: .3s;
+}
+
+ul li a:hover::before{
+transform-origin: left;
+transform: scaleX(1);
+transition:transform .3s ;
+}
