--- a/exercicios/efeitos e dicas/portfolio/estilo.css
+++ b/exercicios/efeitos e dicas/portfolio/estilo.css
@@ -15,6 +15,20 @@ body{
     max-width: 1280px;
     margin: 0 auto;
  }
+ .flex{
+    display: flex;
+ }
+
+.btn-contacto button{
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: 600;
+    background-image: linear-gradient(to right,rgba(34, 34, 199, 0.822),rgba(235, 9, 54, 0.877));
+    /*background-color:rgba(177, 20, 51, 0.829);*/
+    border-radius: 30px;
+    cursor: pointer;
+    transition: .2s;
+ }
 
  /*ESTILO DO CABECALHO*/
 
@@ -46,17 +60,51 @@ header nav ul li{
     padding:0px 20px;
 }
 
-header .btn-contacto button{
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600;
-    background-image: linear-gradient(to right,rgba(0, 0, 255, 0.925),rgba(235, 9, 54, 0.877));
-    /*background-color:rgba(177, 20, 51, 0.829);*/
-    border-radius: 30px;
-    cursor: pointer;
-}
 
 header .btn-contacto button:hover{
     box-shadow: 0px 0px 8px rgba(231, 6, 6, 0.822);
 }
 
+/*ESTILO DO TOPO DO SITE*/
+
+section.toposite{
+    padding: 40px 4%;
+}
+section.toposite.flex{
+    align-items: center;
+    justify-content: center;
+    gap: 90px;
+}
+.toposite h1{
+     color: white;
+     font-size: 38px;
+     line-height: 40px;
+}.toposite h1 span{
+    color:rgba(36, 36, 192, 0.842) ;
+    font-size: 40px;
+}
+.toposite .txttoposite p{
+    color: white;
+    margin: 40px 0;
+
+}
+
+.toposite .imgtoposite img{
+    position: relative;
+    animation: flutuar 3s ease-in-out infinite alternate;
+
+}
+
+.btn-contacto button:hover{
+   box-shadow: 0px 0px8px blue;
+   transform: scale(1.05);
+}
+
+@keyframes flutuar {
+    0%{
+        top: 0;
+    }
+    100%{
+        top: 30px;
+    }
+}
