--- a/exercicios/efeitos e dicas/portfolio/estilo.css
+++ b/exercicios/efeitos e dicas/portfolio/estilo.css
@@ -40,6 +40,10 @@ body{
     color: rgb(32, 32, 136);
  }
 
+ button:hover{
+    box-shadow: 0px 0px 8px rgba(231, 6, 6, 0.822);
+    transform: scale(1.05);
+}
 
 
 
@@ -75,9 +79,7 @@ header nav ul li{
 }
 
 
-header .btn-contacto button:hover{
-    box-shadow: 0px 0px 8px rgba(231, 6, 6, 0.822);
-}
+header 
 
 /*ESTILO DO TOPO DO SITE*/
 
@@ -149,4 +151,42 @@ section.Esp .flex{
 .esp-box h3{
     font-size: 28px;
     margin: 15px 0;
+}
+
+/*ESTILO DO SOBRE*/
+
+section.sobre{
+    padding: 80px 4%;
+}
+section.sobre .flex{
+     gap: 60px;
+     align-items: center;
+}
+.txtsobre{
+    color: white;
+}
+.txtsobre h2{
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 30px;
+
+}.txtsobre h2 span {
+    color: blue;
+    display: block;
+}
+.txtsobre p{
+    margin:10px 0;
+    text-indent: 10px;
+    text-align: justify;
+}
+.txtsobre .btn-social button{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background-color: blue;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: .3s;
 }
