--- a/exercicios/efeitos e dicas/portfolio/estilo.css
+++ b/exercicios/efeitos e dicas/portfolio/estilo.css
@@ -72,7 +72,7 @@ header a {
     transition: .2s;
 }
 
-header a:hover {
+header nav.menu-destop a:hover {
     color: white;
     transform: scale(1.05);
 }
@@ -81,13 +81,74 @@ header nav ul {
     list-style-type: none;
 }
 
-header nav ul li {
+header nav.menu-destop ul li {
     display: inline-block;
     padding: 0px 20px;
 }
 
+/*ESTILO DO MENU MOBILE*/
 
-header
+.btn-abrirmenu i{
+    color: blue;
+    font-size: 40px;
+}
+
+.overlaymenu{
+    background-color: rgba(0, 0, 0, 0.685);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
+}
+.menumobile{
+    background-color:black;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.menumobile.abrir-menu{
+    width: 70%;
+}
+
+.menumobile.abrir-menu~.overlaymenu{
+    display: block;
+}
+
+.menumobile nav ul{
+    text-align: right;
+
+}
+.menumobile nav ul li a{
+    color: white;
+    font-size: 20px;
+    font-weight:300 ;
+    padding:30px 8% ;
+    display: block;
+}
+.menumobile nav ul li a:hover{
+    background-color:rgba(0, 0, 255, 0.767);
+    color: black;
+}
+.menumobile .btnfechar i{
+     color: blue;
+     font-size: 40px;
+}
+.menumobile .btnfechar{
+    padding: 20px 4%;
+}
+
+
+
+
 /*ESTILO DO TOPO DO SITE*/
 
 section.toposite {
